--- a/curso-inicial.css
+++ b/curso-inicial.css
@@ -45,6 +45,13 @@
         background:#ccc;
         color:#000;
     }
+    header p{
+        margin-top:auto;
+        margin-bottom:auto;
+        font-weight:normal;
+        font-size:1rem;
+        color:#c7c7c7;
+    }
 
     .menu_bar{ /*Editamos la barra que contiene el botón del menú*/
         display:block; /*Para que aparezca ya que antes escondimos la barra con display none*/
