--- a/contacto.css
+++ b/contacto.css
@@ -307,6 +307,9 @@ footer{
     .enlaces-cabecera{
         margin-top:-9rem;
     }
+    header p{
+        font-size:0.7rem;
+    }
 
     /*--------Edición del formulario de contacto-----------*/
     form{
