--- a/curso-avanzado-descargar.css
+++ b/curso-avanzado-descargar.css
@@ -310,6 +310,9 @@ footer{
     .enlaces-cabecera{
         margin-top:-9rem;
     }
+    header p{
+        font-size:0.7rem;
+    }
 
     /*--------Edición de curso-avanzado-descargar----------*/
     .gracias{
