--- a/cursos.css
+++ b/cursos.css
@@ -395,6 +395,9 @@ footer{
     .enlaces-cabecera{
         margin-top:-9rem;
     }
+    header p{
+        font-size:0.7rem;
+    }
 
     /*--------Edición de Cursos-----------*/
     .tabla{
