--- a/politica-privacidad.css
+++ b/politica-privacidad.css
@@ -287,6 +287,9 @@ footer{
     .enlaces-cabecera{
         margin-top:-9rem;
     }
+    header p{
+        font-size:0.7rem;
+    }
 
     /*--------Edición de política y privacidad------------*/
     .politica-privacidad{
