--- a/estilos.css
+++ b/estilos.css
@@ -339,21 +339,20 @@ footer{
         .columna01 p{
             color:#fff;
             margin-top:1.25rem;
-            display:flex;
-            flex-flow:wrap;
         }
     .columna02{
         box-sizing:border-box;
+        padding-top:1.5rem;/*Para que el texto de la columna02 quede horizontalmente lineado con el de las otras columnas*/
         }
         .columna02 h1{
             font-size:1.37rem;
             color:#000;
         }
-        .columna02 p img{
-            display:block;
-            padding-top:8px;
-            margin-left:8px;
+        .columna02 a{
+            text-decoration:none;
+            color:#c7c7c7;
         }
+        
     .columna03{
         box-sizing:border-box;
         color:#000;
@@ -365,8 +364,6 @@ footer{
         .columna03 p{
             color:#c7c7c7;
             margin-top:1.25rem;
-            display:flex;
-            flex-flow:wrap;
             }
         .columna03 p a{
             color:#fff;
@@ -374,11 +371,15 @@ footer{
             text-decoration:none;
             }
 
+        .visa, .mastercard, .paypal{
+            padding:0.2rem;
+            margin:0.2rem;
+            background:#ccc;
+        }
 
 
 
 /*----------------------------------REPONSIVE--------------------------------------*/
-
 @media screen and (min-width:767px) and (max-width:1024px){
     header nav{
         left:-30%;
@@ -399,6 +400,7 @@ footer{
     nav.active{ /*Sin esta propiedad el menú no se despliega en Github ap presionar el botón del menú hamburguesa*/
         left: 0px;
     }
+    /*-----------------------Edición del footer------------------*/
     .columna1, .columna2, .columna3{
         width:100%; /*Para que ocupen todo el ancho de la página*/
         margin-bottom:15%;
@@ -450,33 +452,38 @@ footer{
     }
 
 
-    /*------Editamos el footer*/
-    .columna1, .columna2, .columna3{
-        width:100%; /*Para que ocupen todo el ancho de la página*/
-        margin-bottom:15%;/*Para añadir espacio entre las columnas*/
-    }
-    .columna1{
-        margin-top:15%;/*Para que haya un poco más de margen de separaciçon entre las fotos y la primera columna CURSOS*/
-    }
-    .columna3{
-        margin-bottom:5%;/*Para reducir el espacio entre la columna3 y la columna01*/
-    }
+    /*--------Editamos el footer---------*/
+.columna1, .columna2, .columna3{
+    width:100%; /*Para que ocupen todo el ancho de la página*/
+    margin-bottom:15%;/*Para añadir espacio entre las columnas*/
+}
+.columna1{
+    margin-top:15%;/*Para que haya un poco más de margen de separaciçon entre las fotos y la primera columna CURSOS*/
+}
+.columna3{
+    margin-bottom:5%;/*Para reducir el espacio entre la columna3 y la columna01*/
+}
 
-    .columna01{
-        width:100%;
-        padding-left:5.5rem;
-        margin-bottom:-2rem;/*Para reducir la separación que hay entre los items del subcontenedor del footer*/
-        text-align:center;
-    }
-    .columna02{
-        margin-top:2rem;/*Para que se vea bien el texto del copyright*/
-        margin-bottom:-2rem;/*Para reducir la separación que hay entre los items del subcontenedor del footer*/
-    }
-    .columna03{
-        width:100%;
-        padding-left:8rem;
-        padding-bottom:2rem;/*Para añadir más espacio negro debajo de la columna03*/
-    }
+.columna01{
+    width:100%;
+    text-align:center;
+    margin-bottom:-2rem;/*Para reducir la separación que hay entre los items del subcontenedor del footer*/
+}
+.columna02{
+    margin-top:3rem;/*Para que se vea bien el texto del copyright*/
+    margin-bottom:0.5rem;/*Para reducir la separación que hay entre los items del subcontenedor del footer*/
+    text-align:center;/*Para centrar el texto del copyright*/
+    padding-top:0rem;/*Para reducir el espacio que hay sobre la columna02*/
+}
+.columna03{
+    width:100%;
+    margin-top:-0.5rem;/*Para reducir el espacio que hay sobre la columna03*/
+    text-align:center;
+    padding-bottom:3rem;/*Para añadir más espacio negro debajo de la columna03*/
+}
+.columna03 p{
+    margin-top:1rem;/*Para aumentar el espacio que hay sobre Volver al inicio*/
+}
 }
     
     
