--- a/estilos.css
+++ b/estilos.css
@@ -212,6 +212,15 @@
 
 
 /*----------------------Edición de la sección de Instagram----------------------------*/
+.contenedor-instagram .siguenos{
+    font-family:'Times New Roman', Times, serif;
+    font-size:0.8rem;
+}
+.contenedor-instagram .siguenos a{
+    color:#000;
+    text-decoration:underline;
+    font-family:'Times New Roman', Times, serif;
+}
 .contenedor-instagram{
     background:#fff;
     padding:0;
